# backend-homework-master-LIDL

./: .gitignore  README.md  pyproject.toml
data/: csv_sample_1.csv  csv_sample_2.csv  csv_sample_3.csv  csv_sample_4.csv
docker/: docker-compose.yaml  importer.docker
src/: importer.py  log_conf.yaml
src/reader/: CsvReader.py  ReaderInterface.py
tests/: test_CsvReader.py
tests/dummy_data/: csv_sample_1.csv  csv_sample_2.csv
